# openvernierlabpro

./: README.md
old-abondoned-c-lib/: core-internal.h  core.c  core.h
old-abondoned-c-lib/backends/labpro/: labpro-internal.h
old-abondoned-c-lib/branches/cmake_bug_example/: CMakeLists.txt  INSTALL.md  liblabpro.kdev4
old-abondoned-c-lib/branches/cmake_bug_example/CMakeScripts/: Findlibeditline.cmake  Findlibusb-1.0.cmake  liblabproConfig.cmake.in
old-abondoned-c-lib/branches/cmake_bug_example/src/: console.c  liblabpro.c  liblabpro.h
old-abondoned-c-lib/branches/nextgen/: 10-LabPro.rules  CMakeLists.txt  Doxyfile  README.md  overview.md
old-abondoned-c-lib/branches/nextgen/CMakeScripts/: Findlibeditline.cmake
old-abondoned-c-lib/branches/nextgen/src/: console.c
old-abondoned-c-lib/branches/nextgen/src/backends/labpro/: labpro.c  labpro.h
old-abondoned-c-lib/trunk/: INSTALL.md  build_dependency_pack.bat  liblabpro.pc.in
old-abondoned-c-lib/trunk/CMakeScripts/: Findlibusb-1.0.cmake  Findlibusbgx.cmake
old-abondoned-c-lib/trunk/src/: liblabpro.h
